Fix scrollbar issues Use search variable to disable button
Spenser Shumaker <sshumake@redhat.com>

--- a/app/log_viewer/styles/log_viewer.css
+++ b/app/log_viewer/styles/log_viewer.css
@@ -73,17 +73,17 @@
 }
 
 .fileList {
-	overflow: scroll;
+	overflow:auto;
 	padding-right: 0px;
 }
 .no-line-wrap {
 	word-wrap: normal;
 	white-space: pre;
-	overflow: scroll;
+	overflow:auto;
 }
 .resizeable-solution-view {
 	display: none;
-	overflow-y: scroll;
+	overflow:auto;
 	padding: 15px 30px 15px 15px
 }
 .resizeable-solution-view.showMe {
